# nshm-toshi-client

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: dev.yml  publish_docs.yml  release.yml  run-tests.yml
changelog/: index.html
contributing/: index.html
data/: Site_Metadata_Version1.0_(Kaiser_et_al_2017_BNZSEE).xlsx
demo/: DEMO SMS as dataframe from toshi.ipynb  demo_rupture_gen.py  demo_sms_01.py  demo_sms_02.py  demo_sms_03.py  demo_upload.py  demo_upload_2.py
docs/: PLAN_integrate_toshi_auth.md  auth_config.example.json  changelog.md  installation.md  usage.md
installation/: index.html
nshm_toshi_client/: __init__.py  auth.py  aws.py  cli.py  config.py  general_task.py  rupture_generation_task.py  strong_motion_station.py  task_relation.py  timeout_http_adapter.py  toshi_client_base.py  toshi_file.py  toshi_task_file.py
scripts/: push_rupture_sets.py
search/: search_index.json
spike24/spike-ariadne-codegen/: README.md  pyproject.toml  queries.graphql  schema.graphql
spike24/spike-ariadne-codegen/graphql_client/: __init__.py  client.py  create_general_task.py  custom_fields.py  enums.py  file_details_query.py  input_types.py  one_general.py
spike24/spike-ariadne-codegen/spike_ariadne_codegen/: __init__.py  general_task.py  test_client.py
spike24/spike-sqqlc/: file_details_query.py  queries.graphql  schema.json
spike24/spike-sqqlc/second/: queries.graphql  schema.json  schema.py
src/nshm-toshi-client/: demo_upload_2.py
tests/: conftest.py  test_auth.py  test_aws.py  test_cli.py  test_config.py  test_credential_auth.py  test_query_args.py  test_rupture_generation_task.py  test_toshi_file.py
usage/: index.html
