[project]
name = "nshm-toshi-client"
dynamic = ["version"]
description = "client for toshi API"
authors = [
    { name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz" },
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}    
]
readme="README.md"
license = "AGPL-3.0-or-later"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
requires-python = ">=3.10,<4.0"

dependencies = [
  "boto3>=1.43.7",
  "gql[requests]>=4.0.0",
  "requests>=2.27.1",
]

[project.optional-dependencies]
cli = ["click>=8.0", "python-dotenv>=1.0"]

[project.scripts]
toshi-auth = "nshm_toshi_client.cli:cli"

[dependency-groups]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.0.1",
    "mkdocs-click>=0.8.1",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-material>=9.5.21",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-pymdownx-material-extras>=2.5.6",
    "mkdocstrings>=0.26.2",
    "mkdocstrings-python>=2.0.3",
]
dev = [
    "ipython>=8.11.0",
    "mypy>=2.0.0",
    "pip-audit>=2.9.0",
    "pytest-cov>=2.12.0",
    "pytest-xdist>=3.5.0",
    "requests-mock>=1.12.1,<2.0.0",
    "ruff>=0.9.0",
    "safety>=3.6.2",
    "tox>=4.4.4",
    "tox-uv>=1.0.0",
    "types-requests>=2.32.4.20250913,<3.0.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "nshm_toshi_client/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["nshm_toshi_client"]

[tool.hatch.build.targets.sdist]
include = ["nshm_toshi_client", "tests"]

[tool.uv]
exclude-newer = "1 week"

# Exempt NSHM-ecosystem packages (prefixes: nshm, nzshm, solvis, weka, toshi)
# from the 1-week age cutoff so they can be upgraded regardless of release age.
# uv matches exact package names; `false` disables exclude-newer for that package.
[tool.uv.exclude-newer-package]
"nzshm-model" = false
"nzshm-common" = false
"solvis" = false
"toshi-hazard-store" = false
"nshm-toshi-client" = false
"weka" = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "G004"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
ignore_missing_imports = true
follow_untyped_imports = true
